<resources>
    <string name="app_name">Car Note</string>
    <string name="date">Date:</string>
    <string name="mileage">Mileage:</string>
    <string name="tanked_gas_liters">Tanked gas (liters):</string>
    <string name="cost">Cost:</string>
    <string name="confirm">Confirm</string>
    <string name="go_to_tanking">Go to tanking</string>
    <string name="brand_label">Brand:</string>
    <string name="model_label">Model:</string>
    <string name="color_label">Color:</string>
    <string name="plates_label">Plates:</string>
    <string name="new_tank_up">Tank up</string>
    <string name="new_collision">Collision</string>
    <string name="new_repair">Repair</string>
    <string name="made_by_sign">Made by MRNDesign.eu   </string>
    <string name="add_new_car">Fleet</string>
    <string name="car_logo">Car logo</string>
    <string name="is_it_your_default_car">Is it your default car?</string>
    <string name="remove_car">Remove car</string>
    <string name="settings">Settings</string>
    <string name="raport">Raport</string>
    <string name="add_insurance">Costs</string>
    <string name="edit_car">Edit car</string>
    <string name="add_car">add car</string>
    <string name="description">Description:</string>
    <string name="new_repair_title">NEW REPAIR</string>
    <string name="additional_cost">ADDITIONAL COST</string>
    <string name="new_collision_title">NEW COLLISION</string>
    <string name="raport_title">RAPORT</string>
    <string name="car_brand">Car brand:</string>
    <string name="car_model">Car model:</string>
    <string name="registry_plates">Registry plates:</string>
    <string name="color">Color:</string>
    <string name="total_costs">Total costs:</string>
    <string name="average_monthly_cost">Average monthly cost:</string>
    <string name="pick_date_to_check_costs">Pick date to check costs:</string>
    <string name="chosen_month_costs">Chosen month costs:</string>
    <string name="chosen_day_costs">Chosen day costs:</string>
    <string name="average_fuel_consumption">Average fuel consumption:</string>
    <string name="see_detailed_car_raport">See detailed car raport</string>
    <string name="save_detailed_raport_to_pdf">Save detailed raport to EXCEL</string>

</resources>
