<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02AA9A"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/date_label"
                style="@style/comonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/date"
                style="@style/comonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Date"
                android:background="#32C6B9"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:longClickable="false" />

            <TextView
                android:id="@+id/mileage_label"
                style="@style/comonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mileage" />

            <EditText
                android:id="@+id/mileage"
                style="@style/comonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Your car's actual mileage"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/liters_label"
                style="@style/comonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanked_gas_liters" />

            <EditText
                android:id="@+id/liters"
                style="@style/comonEditTextStyleBottomMargin"
                android:autofillHints="Homw many liters did you tank?"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/cost_label"
                style="@style/comonEditTextStyleNoBottomMargin"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/cost"
                style="@style/comonEditTextStyleBottomMargin"
                android:autofillHints="Write money spent on this tanking"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/confirm"
                style="@style/comonEditTextStyleBottomAndTopMargin"
                android:background="#1FCDBD"
                android:text="@string/confirm"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:contentDescription="@string/car_logo"
                android:tint="#0A7369"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="bottom|end"
                android:text="@string/made_by_sign"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>