<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02AA9A"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView9"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/additional_cost"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/cost_date_label"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/cost_date"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Date"
                android:background="#32C6B9"
                android:ems="10"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:longClickable="false" />

            <TextView
                android:id="@+id/cost_cost_label"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/cost_cost"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Homw many liters did you tank?"
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/cost_description_label"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/cost_description"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:autofillHints="Car's model"
                android:ems="10"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor"
                android:scrollHorizontally="false"
                android:gravity="top" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/cost_confirm"
                style="@style/commonEditTextStyleBottomAndTopMargin"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/confirm" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:contentDescription="@string/car_logo"
                android:tint="#0A7369"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="end"
                android:text="@string/made_by_sign"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>