<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02AA9A"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/auto_choose_spinner"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:background="#1FCDBD"
                android:soundEffectsEnabled="true"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/go_to_add_car_form_btn"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1FCDBD"
                android:drawableTop="@drawable/ic_add_car"
                android:shadowColor="#000000"
                android:text="@string/add_car"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/go_to_remove_car_form_btn"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1FCDBD"
                android:drawableTop="@drawable/ic_remove_car"
                android:text="@string/remove_car"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/go_to_edit_car_form_btn"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1FCDBD"
                android:drawableTop="@drawable/ic_edit_car"
                android:text="@string/edit_car"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:contentDescription="@string/car_logo"
                android:tint="#0A7369"
                app:srcCompat="@drawable/ic_logo" />

            <Button
                android:id="@+id/confirm_cars_changes_btn"
                style="@style/commonEditTextStyleBottomAndTopMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#1FCDBD"
                android:text="@string/confirm"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="end"
                android:text="@string/made_by_sign"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>