<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:padding="10dp"
    android:screenOrientation="portrait">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02AA9A"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                android:text="@string/raport_title"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView2"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/raportTextView"
                style="@style/commonEditTextStyleBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Car's model"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/confirm"
                style="@style/commonEditTextStyleBottomAndTopMargin"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/confirm" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:contentDescription="@string/car_logo"
                android:tint="#0A7369"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="end"
                android:text="@string/made_by_sign"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>