<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:screenOrientation="portrait">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#02AA9A"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                style="@style/commonEditTextStyleNoBottomMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="CAR NOTEBOOK"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/auto_choose_spinner"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:background="#1FCDBD"
                android:soundEffectsEnabled="true"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0ECFBB"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="25dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history_recycleView"
                    style="@style/textFieldRaportInformation"
                    android:layout_width="382dp"
                    android:layout_height="359dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/go_to_tank_btn"
                    style="@style/commonEditTextStyleBottomMargin"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#1FCDBD"
                    android:drawableTop="@drawable/ic_new_tank_up"
                    android:text="@string/new_tank_up"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.112"
                    app:layout_constraintStart_toEndOf="@+id/go_to_add_insurance_btn"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/go_to_raport_btn"
                    style="@style/commonEditTextStyleBottomMargin"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#1FCDBD"
                    android:drawableTop="@drawable/ic_raport"
                    android:text="@string/raport"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/go_to_car_form_btn"
                    style="@style/commonEditTextStyleBottomMargin"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#1FCDBD"
                    android:drawableTop="@drawable/ic_add_new_car"
                    android:text="@string/add_new_car"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/go_to_tank_btn"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/go_to_add_insurance_btn"
                    style="@style/commonEditTextStyleBottomMargin"
                    android:layout_width="80dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#1FCDBD"
                    android:drawableTop="@drawable/ic_insurance"
                    android:text="@string/add_insurance"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.004"
                    app:layout_constraintStart_toEndOf="@+id/go_to_raport_btn"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:targetApi="lollipop" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/car_logo"
                    android:tint="#0A7369"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.79"
                    app:srcCompat="@drawable/ic_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:contentDescription="@string/car_logo"
                android:tint="#0A7369"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="end"
                android:text="@string/made_by_sign"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>